Fixed input type search for TextBoxWithLabel on Safari

--- a/component-lib/src/molecules/TextBoxWithLabel/TextBoxWithLabel.pcss
+++ b/component-lib/src/molecules/TextBoxWithLabel/TextBoxWithLabel.pcss
@@ -7,7 +7,18 @@
         color: var(--dark-grey);
     }
 
+
     &__input {
+        &[type="search"] {
+            -webkit-appearance: none;
+        }
+        &[type="search"]::-webkit-search-decoration,
+        &[type="search"]::-webkit-search-cancel-button,
+        &[type="search"]::-webkit-search-results-button,
+        &[type="search"]::-webkit-search-results-decoration {
+            display: none;
+        }
+
         border: 1px solid var(--dark-grey-2);
         color: var(--black);
         font: inherit;
